<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/teamALogo"
        android:src="@drawable/barca"
        app:layout_constraintBottom_toTopOf="@+id/team_a_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/teamBLogo"
        android:src="@drawable/bayern"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="90dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_a_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:text="@string/teamAScore"
        android:textColor="#000000"
        android:textSize="56sp"
        app:layout_constraintEnd_toStartOf="@+id/dash"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="24dp"
        android:text="@string/dash"
        android:textColor="#000000"
        android:textSize="56sp"
        app:layout_constraintEnd_toStartOf="@+id/team_b_score"
        app:layout_constraintStart_toEndOf="@+id/team_a_score"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/team_b_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="24dp"
        android:text="@string/teamBScore"
        android:textColor="#000000"
        android:textSize="56sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/dash"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/team_a_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/teamA"
        android:textColor="#616161"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp"
        android:text="@string/teamB"
        android:textColor="#616161"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:onClick="addOneForTeamA"
        android:text="@string/goalA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_a_textview" />


    <Button
        android:id="@+id/goal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:onClick="addOneForTeamB"
        android:text="@string/goalB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/teamAFoulScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/teamAFoulScore"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/team_a_textview"
        app:layout_constraintTop_toBottomOf="@+id/team_a_score" />

    <TextView
        android:id="@+id/teamBFoulScore"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/teamBFoulScore"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/teamAFoulScore"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/team_b_score"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/foulTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/foul"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/teamBFoulScore"
        app:layout_constraintStart_toEndOf="@+id/teamAFoulScore"
        app:layout_constraintTop_toBottomOf="@+id/dash" />

    <Button
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:onClick="incrementFoulForTeamA"
        android:text="@string/teamARedCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal" />


    <Button
        android:id="@+id/red2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:onClick="incrementFoulForTeamB"
        android:text="@string/teamBRedCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal2" />

    <Button
        android:id="@+id/yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/penaltyA"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:onClick="incrementFoulForTeamA"
        android:text="@string/teamAYellow_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red" />

    <Button
        android:id="@+id/yellow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/penaltyB"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:onClick="incrementFoulForTeamB"
        android:text="@string/teamBYellow_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red2" />

    <Button
        android:id="@+id/freeKickA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:onClick="incrementFoulForTeamA"
        android:text="@string/teamAFreeKick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow" />

    <Button
        android:id="@+id/freeKickB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:onClick="incrementFoulForTeamB"
        android:text="@string/teamBFreeKick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yellow2" />

    <Button
        android:id="@+id/penaltyA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/red"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:onClick="incrementFoulForTeamA"
        android:text="@string/teamAPenaltyKick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freeKickA" />

    <Button
        android:id="@+id/penaltyB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/red2"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:onClick="incrementFoulForTeamB"
        android:text="@string/teamBPenaltyKick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freeKickB" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="165dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="16dp"
        android:onClick="resetAll"
        android:text="@string/resetScores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>